# mini-ffmpeg

./: CMakeLists.txt  ffplay.c  ffplay.sln  ffplay.vcxproj  ffplay.vcxproj.filters
libavcodec/: avcodec.h  utils_codec.c
libavformat/: avformat.h  avidec.c  utils_format.c
libavutil/: common.h
